syntax = "proto3";

package proto;
import  "google/api/annotations.proto";
option go_package = "github.com/grpc-chat-app/gen-pb";

message User {
    string id = 1;
    string display_name = 2;
}

message Message {
    string id = 1;
    User user = 2;
    string message = 3;
    string timestamp = 4;
}

message Connect {
    User user = 1;
    bool active = 2;
}

message Close{}

// The request message containing the user's name
message EchoRequest {
    string name = 1;
}

// The response message containing the greetings
message EchoReply {
    string message = 1;
}
service Broadcast {
    rpc Echo(EchoRequest) returns (EchoReply) {
        option (google.api.http) = {
            post: "/v1/echo"
            body: "*"
        };
    };
    rpc RegisterUser(User) returns (Close) {
        option (google.api.http) = {
            post: "/v1/example/echo"
            body: "*"
        };
    };
    rpc CreateStream(Connect) returns (stream Message) {
        option (google.api.http) = {
            post: "/v1/join"
            body: "*"
        };
    };
    rpc BroadcastMessage(Message) returns (Close) {
        option (google.api.http) = {
            post: "/v1/send"
            body: "*"
        };
    };
}
